fix: text overflow

--- a/media/main.css
+++ b/media/main.css
@@ -79,7 +79,8 @@ a {
   border-radius: 3px;
 }
 
-.response .code {
+.response .code,
+.response .text {
   overflow-x: scroll;
 }
 
